attack animation needs to be fixed sooon

--- a/topdowncamera/index.html
+++ b/topdowncamera/index.html
@@ -24,10 +24,13 @@
   <!-- //^ bottom UI -->
   <div id="bottomUI">
     <div class="dpadParent">
-      <div class="emptyDpad"></div>
+      <button id="attackButton" class="emptyDpad dpadButton"
+        style="display : flex; align-items : center; transform : translate3d(-30px,-10px,0); background-color: lightskyblue; vertical-align: middle;">
+        <img src="./src/images/fist.png" style="width:50px; height:50px"></button>
       <button id="dpadUp" class="dpadButton">
         <img class="dpadArrow" src="./src/images/uparrow.png"></button>
-      <div class="emptyDpad"></div>
+      <button class="dpadButton"
+        style="transform : translate3d(30px,-10px,0); background-color: lightcyan; vertical-align: middle;"></button>
 
       <button id="dpadLeft" class="dpadButton">
         <img class="dpadArrow" src="./src/images/uparrow.png" style="transform : rotate(-90deg)"></button>
