can walk around mmo

--- a/client/index.html
+++ b/client/index.html
@@ -2,14 +2,18 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8" name="theme-color" content="#1A0F9A">
+  <meta charset="UTF-8">
+  <!-- <meta name="theme-color" content="#317EFB"> -->
+  <meta name="theme-color" content="#000000">
   <meta name="apple-mobile-web-app-capable" content="yes">
-  <meta name="apple-mobile-web-app-status-bar-style" content="red">
+
+  <meta name="apple-mobile-web-app-status-bar-style" content="#ff0000">
+
 
   <link rel="icon" type="image/svg+xml" href="favicon.svg" />
   <!--  ^ initial-scale=1.0 -->
 
-  <meta name="viewport" content="width=device-width, maximum-scale=1.0,user-scalable=no" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0,maximum-scale=1.0,user-scalable=no" />
   <title>GAME</title>
   <style>
     .no-double-tap {
