--- a/client/index.html
+++ b/client/index.html
@@ -28,7 +28,7 @@
 
 
 <body>
-  <div id="spriteTest"></div>
+  <!-- <div id="spriteTest"></div> -->
   <div id="modalWindowWrapper">
     <div id="modalWindow">
       <div id="modalWindowNoticeIcon"></div>
@@ -75,13 +75,14 @@
   <!-- //^ bottom UI -->
   <div id="bottomUI">
     <div class="dpadParent">
-      <button id="attackButton" class="emptyDpad dpadButton"
+      <button id="attackButton" class="dpadButton"
         style="display : flex; align-items : center; transform : translate3d(-30px,-10px,0); background-color: lightslategray; vertical-align: middle;">
-        <img src="./src/images/fist.png" style="width:50px; height:50px"></button>
+        <img src="./src/images/fist.png" class="dpadArrow" style="width:50px; height:50px"></button>
       <button id="dpadUp" class="dpadButton">
         <img class="dpadArrow" src="./src/images/uparrow.png"></button>
       <button class="dpadButton"
-        style="transform : translate3d(30px,-10px,0); background-color: lightslategray; vertical-align: middle;"></button>
+        style="transform : translate3d(30px,-10px,0); background-color: lightslategray; vertical-align: middle;">
+        <img src="./src/images/eatIcon.png" class="dpadArrow" style="width:50px; height:50px"></button>
 
       <button id="dpadLeft" class="dpadButton">
         <img class="dpadArrow" src="./src/images/uparrow.png" style="transform : rotate(-90deg)"></button>
