--- a/client/index.html
+++ b/client/index.html
@@ -76,12 +76,11 @@
   <div id="bottomUI">
     <div class="dpadParent">
       <button id="attackButton" class="dpadButton"
-        style="display : flex; align-items : center; transform : translate3d(-30px,-10px,0); background-color: lightslategray; vertical-align: middle;">
+        style="display : flex; align-items : center; transform : translate3d(-30px,-10px,0); vertical-align: middle;">
         <img src="./src/images/fist.png" class="dpadArrow" style="width:50px; height:50px"></button>
       <button id="dpadUp" class="dpadButton">
         <img class="dpadArrow" src="./src/images/uparrow.png"></button>
-      <button class="dpadButton"
-        style="transform : translate3d(30px,-10px,0); background-color: lightslategray; vertical-align: middle;">
+      <button id="eatButton" class="dpadButton" style="transform : translate3d(30px,-10px,0); vertical-align: middle;">
         <img src="./src/images/eatIcon.png" class="dpadArrow" style="width:50px; height:50px"></button>
 
       <button id="dpadLeft" class="dpadButton">
