--- a/client/index.html
+++ b/client/index.html
@@ -78,10 +78,13 @@
       <button id="attackButton" class="dpadButton"
         style="display : flex; align-items : center; transform : translate3d(-30px,-10px,0); vertical-align: middle;">
         <img src="./src/images/fist.png" class="dpadArrow" style="width:50px; height:50px"></button>
+      <button id="eatButton" class="dpadButton"><img src="./src/images/eatIcon.png" class="dpadArrow"
+          style="width:50px; height:50px"></button>
+
       <button id="dpadUp" class="dpadButton">
         <img class="dpadArrow" src="./src/images/uparrow.png"></button>
-      <button id="eatButton" class="dpadButton" style="transform : translate3d(30px,-10px,0); vertical-align: middle;">
-        <img src="./src/images/eatIcon.png" class="dpadArrow" style="width:50px; height:50px"></button>
+      <button id="pickButton" class="dpadButton" style="transform : translate3d(30px,-10px,0); vertical-align: middle;">
+        <img src="./src/images/pickIcon.png" class="dpadArrow" style="width:50px; height:50px"></button>
 
       <button id="dpadLeft" class="dpadButton">
         <img class="dpadArrow" src="./src/images/uparrow.png" style="transform : rotate(-90deg)"></button>
