--- a/client/index.html
+++ b/client/index.html
@@ -28,6 +28,56 @@
 
 
 <body>
+
+  <div id="LoginWindowWrapper">
+    <div>
+      <p>Enter Your Name</p>
+      <input autocomplete="off" placeholder="Enter Your name..." id="LoginDisplayNameInput">
+
+    </div>
+    <hr>
+    <p>Select Your Character!</p>
+    <div class="character-select-wrapper">
+
+      <button id="select-male01" class="character-select-button">
+        <div class="wrapper-character force-position-relative">
+          <div class="character">
+            <div class="character_spritesheet character_male01"></div>
+          </div>
+        </div>
+      </button>
+      <button id="select-male02" class="character-select-button">
+        <div class="wrapper-character force-position-relative">
+          <div class="character">
+            <div class="character_spritesheet character_male02"></div>
+          </div>
+        </div>
+      </button>
+      <button id="select-female01" class="character-select-button">
+        <div class="wrapper-character force-position-relative">
+          <div class="character">
+            <div class="character_spritesheet character_female01"></div>
+          </div>
+        </div>
+      </button>
+      <button id="select-female02" class="character-select-button">
+        <div class="wrapper-character force-position-relative">
+          <div class="character">
+            <div class="character_spritesheet character_female02"></div>
+          </div>
+        </div>
+      </button>
+    </div>
+    <button id="LetsGoButton" class="primary-button">Let's Go!</button>
+
+
+  </div>
+
+
+
+  <div id="WarningMessageWrapper">
+    <!-- <div id="WarningMessage"></div> -->
+  </div>
   <!-- <div id="spriteTest"></div> -->
   <div id="modalWindowWrapper">
     <div id="modalWindow">
