--- a/client/index.html
+++ b/client/index.html
@@ -128,13 +128,18 @@
       <button id="attackButton" class="dpadButton"
         style="display : flex; align-items : center; transform : translate3d(-30px,-10px,0); vertical-align: middle;">
         <img src="./src/images/fist.png" class="dpadArrow" style="width:50px; height:50px"></button>
-      <button id="eatButton" class="dpadButton"><img src="./src/images/eatIcon.png" class="dpadArrow"
-          style="width:50px; height:50px"></button>
+      <button id="eatButton" class="dpadButton">
+        EAT
+        <!-- <img src="./src/images/eatIcon.png" class="dpadArrow"
+          style="width:50px; height:50px"> -->
+        </button>
 
       <button id="dpadUp" class="dpadButton">
         <img class="dpadArrow" src="./src/images/uparrow.png"></button>
       <button id="pickButton" class="dpadButton" style="transform : translate3d(30px,-10px,0); vertical-align: middle;">
-        <img src="./src/images/pickIcon.png" class="dpadArrow" style="width:50px; height:50px"></button>
+        <!-- <img src="./src/images/pickIcon.png" class="dpadArrow" style="width:50px; height:50px"> -->
+        PICK UP
+      </button>
 
       <button id="dpadLeft" class="dpadButton">
         <img class="dpadArrow" src="./src/images/uparrow.png" style="transform : rotate(-90deg)"></button>
@@ -151,7 +156,11 @@
 
   <!-- //^ camera Game Screen UI -->
 
+
   <div id="camera" class="camera">
+
+    <div id="darkShadow"></div>
+    <div id="lightTest"></div>
     <div id="map" class="map">
 
     </div>
