--- a/client/index.html
+++ b/client/index.html
@@ -139,6 +139,11 @@
       <button id="pickButton" class="dpadButton" style="transform : translate3d(30px,-10px,0); vertical-align: middle;">
         <!-- <img src="./src/images/pickIcon.png" class="dpadArrow" style="width:50px; height:50px"> -->
         PICK UP
+        <button id="emotionButton" class="dpadButton">
+          Emotion
+          <!-- <img src="./src/images/eatIcon.png" class="dpadArrow"
+            style="width:50px; height:50px"> -->
+          </button>
       </button>
 
       <button id="dpadLeft" class="dpadButton">
